[package]
name = "tally-ho"
version = "0.1.0"
authors = ["Zachary Newsom <knownsconegames@gmail.com>"]

[dependencies]
log = "0.4.1"
fern = {version = "0.5.5", features = ["colored"]}
chrono = "0.4.2"
vulkano = "0.9.0"
vulkano-win = "0.9.0"
vulkano-shader-derive = "0.9.0"
winit = "0.11.0"
cgmath = "0.16.1"